tests/miniJava/neg/006142_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { public java [ 0 ] = 0 ; } }
